<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/address_list_coordiator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/address_index_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/address_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/list_addresses_button_holding_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">

        <LinearLayout
            android:id="@+id/list_addresses_button_holding_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addresss_index_clear_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/fab_margin"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_notification_clear_all" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addresss_index_search_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/fab_margin"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_search_category_default" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/create_addresss_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_input_add" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
